<resources>
    <string name="app_name">Medi Ku</string>
    <string name="desc_splash">Personal health record application</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_desc_login">Unlock your personal \nmedical records</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_signup">Don’t have account? Sign Up</string>
    <string name="btn_signin_google">Sign In With Google</string>
    <string name="error_email_empty">Email is mandatory!</string>
    <string name="error_email_not_valid">Email is not valid!</string>
    <string name="error_password_empty">Password is mandatory!</string>
    <string name="error_password_not_valid">Password not valid!</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Have an account? Sign In</string>
    <string name="btn_sign_up_google">Sign Up with Google</string>
    <string name="error_name_empty">Name is mandatory!</string>
    <string name="error_confirm_password_empty">Confirm Password is mandatory!</string>
    <string name="error_password_confirm_not_valid">Password Confirm not valid!</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_edit_password">Edit Password</string>
    <string name="label_logout">Logout</string>
    <string name="toolbar_profile">Profile</string>
    <string name="btn_retry">Retry</string>
    <string name="hint_height">Height (cm)</string>
    <string name="hint_weight">Weight (kg)</string>
    <string name="btn_save">Save</string>
    <string name="toolbar_edit_profile">Edit Profile</string>
    <string name="message_success_edit_profile">Success Edit Profile!</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="error_old_password_empty">Old password is mandatory!</string>
    <string name="error_new_password_empty">New password is mandatory</string>
    <string name="message_success_edit_password">Password has been successfully changed!</string>

    <!--image picker dialog-->
    <string name="label_select_image_from">Select Image from</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="desc_forgot_password">We will send an email to change \nyour password</string>
    <string name="btn_send_email">Send Email</string>
    <string name="btn_add_medical_record">Add Medical Record</string>
    <string name="label_select_category">Select Category</string>
    <string name="label_diagnose">Diagnose</string>
    <string name="hint_diagnose">Diagnose</string>
    <string name="label_general_condition">General Condition</string>
    <string name="hint_blood_pressure">Blood Pressure (mmHg)</string>
    <string name="hint_body_temperature">Body Temperature (Celcius)</string>
    <string name="hint_heart_rate">Heart Rate (Bpm)</string>
    <string name="toolbar_add_medical_record">Add Medical Record</string>
    <string name="error_diagnose_empty">Diagnose is mandatory!</string>
    <string name="error_blood_pressure_empty">Blood pressure is mandatory!</string>
    <string name="error_body_temperature_empty">Body temperature is mandatory!</string>
    <string name="error_heart_rate_empty">Heart rate is mandatory!</string>
    <string name="message_success_add_medical_report">Success add medical report!</string>
    <string name="btn_edit">Edit</string>
    <string name="label_blood_pressure">Blood Pressure</string>
    <string name="label_body_temperature">Body Temperature</string>
    <string name="label_heart_rate">Heart Rate</string>
    <string name="toolbar_detail_medical_record">Detail Medical Record</string>
    <string name="hint_select_date">Select Date</string>
    <string name="error_date_empty">Date is mandatory!</string>
    <string name="label_visit_date">Visit Date</string>
    <string name="label_live_statistics">Live Statistics</string>
    <string name="label_desc_covid_stat">Confirmed, Death and Recover \nCovid -19 case all over the world</string>
    <string name="label_confirmed_cases">Confirmed</string>
    <string name="label_deaths">Deaths</string>
    <string name="label_recovered">Recovered</string>
    <string name="label_your_country">Your Country</string>
    <string name="label_top_country">Top Country</string>
    <string name="label_other_country">Other Country</string>
    <string name="urlImageCountryFlag">https://www.countryflags.io/%1$s/flat/24.png</string>
    <string name="label_data_shown">Data shown are the data as of %1$s</string>
    <string name="btn_covid">See live statistics of Covid-19 cases all over the world</string>
    <string name="toolbar_covid_19">Covid-19</string>
    <string name="label_country">Country</string>
    <string name="menu_home">Home</string>
    <string name="label_hi">Hi!</string>
    <string name="label_condition">How’s your condition?</string>
    <string name="label_medical_records">Medical Records</string>
    <string name="label_latest_news">Latest News</string>
    <string name="lipsum_short">Lorem ipsum dolor sit amet, consectetur</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="error_default">Something went wrong</string>
    <string name="dummy_day">Day 1</string>
    <string name="dummy_date">01 May</string>
    <string name="dummy_status_menstrual">The Period</string>
    <string name="dummy_status_fertile">Chance to Get Pregnant</string>
    <string name="dummy_next_period">Next Period on 01 Jun</string>
    <string name="label_i_dont_remember">I don’t remember</string>
    <string name="hint_last_period">When did your last period start?</string>
    <string name="label_long_period">How long is your period (average)?</string>
    <string name="hint_long_period">Period long (normally 3-7 days)</string>
    <string name="hint_long_cycle">Cycle long (normally 21 - 35 days)</string>
    <string name="btn_log_period">Log Period</string>
    <string name="label_menstrual_desc">We can help you predict your menstrual period by filling in the data below</string>
    <string name="toolbar_edit_menstrual">Edit Menstrual Period</string>
    <string name="message_success_save_menstrual_period">Success saving menstrual period</string>
    <string name="error_last_period_empty">Last period is mandatory!</string>
    <string name="error_period_long_empty">Period long is mandatory!</string>
    <string name="error_cycle_long_empty">Cycle long is mandatory!</string>
    <string name="error_period_long_less_than_1">Period long must not less than 1</string>
    <string name="error_period_long_more_than_12">Period long must not more than 12</string>
    <string name="error_cycle_long_less_than_21">Cycle long must not less than 21</string>
    <string name="error_cycle_long_more_than_100">Cycle long must not more than 100</string>
    <string name="toolbar_menstrual_calendar">Menstrual Calendar</string>
    <string name="menu_edit_menstrual">Edit</string>
    <string name="error_edit_after_today">You can only edit event before current month (%1$s)</string>
    <string name="error_medical_record_empty">You don\'t have any medical record.</string>
    <string name="message_new_version_available">New version available</string>
    <string name="message_please_update">Please, update app to new version to continue reposting.</string>
    <string name="btn_update">Update</string>
    <string name="btn_no_thanks">No, thanks</string>
    <string name="dummy_version">v2.2</string>
    <string name="label_feature">Features</string>
    <string name="app_feature">- Record medical history. \n- See your medical history. \n- Record menstrual period. \n- Predict your menstrual period. \n- Read latest health news or articles. \n- All feature build using Firebase.</string>
    <string name="label_resource">Resources</string>
    <string name="toolbar_about">About</string>
    <string name="label_api_and_data">API and data</string>
    <string name="label_medical_record">Medical Records</string>
    <string name="label_menstrual_period">Menstrual Period</string>
    <string name="label_covid19_check">Covid-19 Check</string>
    <string name="label_covid19_stat">Covid-19 Status</string>
    <string name="btn_give_rating">Give Rating</string>
    <!--end of image picker dialog-->
</resources>
