<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearVerticalWrap"
    android:gravity="center"
    android:layout_gravity="center">
    <ImageView
        style="@style/ImageView120"
        android:src="@drawable/ic_shield"/>
    <TextView
        style="@style/TextBoldSuperExtraBig"
        android:text="@string/label_forgot_password"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimens_40dp"/>
    <TextView
        style="@style/TextBoldBig"
        android:text="@string/desc_forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimens_10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputLayoutDefault"
        android:layout_marginTop="@dimen/dimens_40dp"
        android:layout_marginStart="@dimen/dimens_20dp"
        android:layout_marginEnd="@dimen/dimens_20dp">
        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextDefault"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:hint="@string/hint_email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.anangkur.materialloadingbutton.MaterialLoadingButton
        android:id="@+id/btn_signin"
        style="@style/ButtonWidth280"
        app:mlb_cornerRadius="@dimen/dimens_100dp"
        app:mlb_defaultColor="@color/colorPrimary"
        app:mlb_textColor="@color/white"
        app:mlb_textButton="@string/btn_send_email"
        android:layout_marginTop="@dimen/dimens_40dp"/>
</LinearLayout>