<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LinearVerticalDefault">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:id="@+id/layout_menstrual"
        style="@style/LinearVerticalDefault">
        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendar_menstrual"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_0dp"
            android:layout_weight="4"
            app:headerColor="@color/white"
            app:headerLabelColor="@color/black"
            app:forwardButtonSrc="@drawable/ic_navigate_next_black_24dp"
            app:previousButtonSrc="@drawable/ic_keyboard_arrow_left_black_24dp"/>
        <RelativeLayout
            style="@style/RelativeDefault"
            android:layout_height="@dimen/dimens_0dp"
            android:layout_weight="3">
            <LinearLayout
                android:id="@+id/layout_illustration_menstrual"
                style="@style/LinearVerticalDefault"
                android:layout_centerInParent="true"
                android:padding="@dimen/dimens_20dp"
                android:background="@drawable/rect_gradient_red"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_count_day"
                    style="@style/TextBoldBig"
                    android:text="@string/dummy_day"
                    android:textColor="@color/white"/>
                <ImageView
                    android:id="@+id/iv_status_menstrual"
                    style="@style/ImageViewWrapAll"
                    android:src="@drawable/ic_blood"
                    android:layout_marginTop="@dimen/dimens_20dp"/>
                <TextView
                    android:id="@+id/tv_date"
                    style="@style/TextBoldBig"
                    android:text="@string/dummy_date"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dimens_20dp"/>
                <TextView
                    android:id="@+id/tv_label_menstrual"
                    style="@style/TextBoldBig"
                    android:text="@string/dummy_status_menstrual"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dimens_10dp"/>
                <TextView
                    android:id="@+id/tv_next_menstrual"
                    style="@style/TextBoldBig"
                    android:text="@string/dummy_next_period"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dimens_10dp"/>
                <com.anangkur.materialloadingbutton.MaterialLoadingButton
                    android:id="@+id/btn_log_period"
                    android:layout_width="@dimen/dimens_200dp"
                    android:layout_height="@dimen/dimens_48dp"
                    app:mlb_textButton="@string/btn_log_period"
                    app:mlb_cornerRadius="@dimen/dimens_100dp"
                    app:mlb_defaultColor="@color/colorPrimary"
                    app:mlb_textColor="@color/white"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:visibility="gone"/>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/pb_menstrual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>