<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearVerticalDefault">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        style="@style/LinearVerticalWrap"
        android:padding="@dimen/dimens_20dp">
        <ImageView
            style="@style/ImageViewWrapAll"
            android:src="@drawable/ic_shield"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_old"
            style="@style/TextInputLayoutDefault"
            android:layout_marginTop="@dimen/dimens_20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_password_old"
                style="@style/EditTextDefault"
                android:hint="@string/hint_old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_new"
            style="@style/TextInputLayoutDefault"
            android:layout_marginTop="@dimen/dimens_20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_password_new"
                style="@style/EditTextDefault"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_confirm"
            style="@style/TextInputLayoutDefault"
            android:layout_marginTop="@dimen/dimens_20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_password_confirm"
                style="@style/EditTextDefault"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        style="@style/RelativeDefault">
        <com.anangkur.materialloadingbutton.MaterialLoadingButton
            android:id="@+id/btn_save"
            style="@style/ButtonDefault"
            app:mlb_cornerRadius="@dimen/dimens_100dp"
            app:mlb_defaultColor="@color/colorPrimary"
            app:mlb_textColor="@color/white"
            app:mlb_textButton="@string/btn_save"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>