<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ConstraintDefault"
    android:paddingStart="@dimen/dimens_20dp"
    android:paddingEnd="@dimen/dimens_20dp">

    <ImageView
        android:id="@+id/ic_logo"
        style="@style/ImageViewError"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_appname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/tv_appname"
        style="@style/TextSuperExtraBig"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputLayoutDefault"
        app:layout_constraintTop_toBottomOf="@id/tv_appname"
        app:layout_constraintBottom_toTopOf="@id/til_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.1">
        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextDefault"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputLayoutDefault"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintBottom_toTopOf="@id/btn_forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextDefault"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_forgot_password"
        style="@style/TextBig"
        android:text="@string/btn_forgot_password"
        android:padding="@dimen/dimens_10dp"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/til_password" />

    <RelativeLayout
        android:id="@+id/btn_login"
        style="@style/RelativeButton"
        app:layout_constraintTop_toBottomOf="@id/btn_forgot_password"
        app:layout_constraintBottom_toTopOf="@id/btn_signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2">
        <TextView
            android:id="@+id/tv_btn_login"
            style="@style/TextBig"
            android:layout_centerInParent="true"
            android:text="@string/btn_login"
            android:textColor="@color/white"/>
        <ProgressBar
            android:id="@+id/pb_btn_login"
            style="?android:progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_signup"
        style="@style/RelativeButtonTransparent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/tv_btn_signup"
            style="@style/TextBig"
            android:layout_centerInParent="true"
            android:text="@string/btn_sign_up"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
